um monte de coisa

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <i class="fas fa-fish draggable" draggable="true" style="color: #9966ff;" id="fish"></i>
     <i class="fas fa-frog draggable" draggable="true" style="color: #4bc0c0;" id="frog"></i>
     <i class="fas fa-horse draggable" draggable="true" style="color: #333333;" id="horse"></i>
-    <i class="fas fa-hippo draggable" draggable="true" style="color: #ff9f40;" id="hippo"></i>
     <i class="fas fa-spider draggable" draggable="true" style="color: #ff99cc;" id="spider"></i>
   </section>
   <section class="droppable-elements">
@@ -23,11 +22,13 @@
     <!-- <div class="droppable metais" data-draggable-id="frog"></div> -->
       
       <img src="/images/metais.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="/images/naoReciclaveis.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="/images/organicos.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="/images/papeis.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="/images/plasticos.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="/images/vidros.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
+      <img src="/images/naoReciclaveis.png" class="droppable metais" data-draggable-id="cat" width="300" height="300">
+      <img src="/images/organicos.png" class="droppable metais" data-draggable-id="dog" width="300" height="300">
+      <img src="/images/papeis.png" class="droppable metais" data-draggable-id="dove" width="300" height="300">
+      <img src="/images/plasticos.png" class="droppable metais" data-draggable-id="horse" width="300" height="300">
+      <img src="/images/vidros.png" class="droppable metais" data-draggable-id="spider" width="300" height="300">
+
+      
 
 
     <!-- <div class="droppable naoReciclaveis" data-draggable-id="dove"></div>
@@ -36,6 +37,13 @@
     <div class="droppable plasticos" data-draggable-id="dog"></div>
     <div class="droppable vidros" data-draggable-id="dog"></div> -->
   </section>
+
+  <section class="output">
+    <h1 id="result" >Pontuação: 0</h1>
+  </section>
+
+  <embed src="/sounds/pokemonMusic.mp3" loop="true" autostart="true">
+
 <!-- partial -->
   <script  src="./script.js"></script>
 
