--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     <!-- <div class="droppable metais" data-draggable-id="frog"></div> -->
       
-      <img src="/images/metais.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="/images/naoReciclaveis.png" class="droppable metais" data-draggable-id="cat" width="300" height="300">
-      <img src="/images/organicos.png" class="droppable metais" data-draggable-id="dog" width="300" height="300">
-      <img src="/images/papeis.png" class="droppable metais" data-draggable-id="dove" width="300" height="300">
-      <img src="/images/plasticos.png" class="droppable metais" data-draggable-id="horse" width="300" height="300">
-      <img src="/images/vidros.png" class="droppable metais" data-draggable-id="spider" width="300" height="300">
+      <img src="./images/metais.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
+      <img src="./images/naoReciclaveis.png" class="droppable metais" data-draggable-id="cat" width="300" height="300">
+      <img src="./images/organicos.png" class="droppable metais" data-draggable-id="dog" width="300" height="300">
+      <img src="./images/papeis.png" class="droppable metais" data-draggable-id="dove" width="300" height="300">
+      <img src="./images/plasticos.png" class="droppable metais" data-draggable-id="horse" width="300" height="300">
+      <img src="./images/vidros.png" class="droppable metais" data-draggable-id="spider" width="300" height="300">
 
       
 
@@ -42,10 +42,14 @@
     <h1 id="result" >Pontuação: 0</h1>
   </section>
 
-  <embed src="/sounds/pokemonMusic.mp3" loop="true" autostart="true">
+
 
 <!-- partial -->
   <script  src="./script.js"></script>
 
 </body>
+
+<footer>  
+  <embed src="./sounds/pokemonMusic.mp3" loop="true" autostart="true" width="2"height="0"> 
+</footer>
 </html>
