--- a/index.html
+++ b/index.html
@@ -3,53 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>joguinho</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css'>
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
 
-<section class="draggable-elements">
-    <i class="fas fa-cat draggable" draggable="true" style="color: #ff6384;" id="cat"></i>
-    <i class="fas fa-dog draggable" draggable="true" style="color: #36a2eb;" id="dog"></i>
-    <i class="fas fa-dove draggable" draggable="true" style="color: #ffce56;" id="dove"></i>
-    <i class="fas fa-fish draggable" draggable="true" style="color: #9966ff;" id="fish"></i>
-    <i class="fas fa-frog draggable" draggable="true" style="color: #4bc0c0;" id="frog"></i>
-    <i class="fas fa-horse draggable" draggable="true" style="color: #333333;" id="horse"></i>
-    <i class="fas fa-spider draggable" draggable="true" style="color: #ff99cc;" id="spider"></i>
+  <section class="draggable-elements">
+
+
+    <i class="fas fa-cat draggable lixo" draggable="true" game="15" style="color: #ff6384;" id="metal"></i>
+    <i class="fas fa-dog draggable" draggable="true" in-game-value="2" style="color: #36a2eb;" id="plastico"></i>
+    <i class="fas fa-dove draggable" draggable="true" in-game-value="3" style="color: #ffce56;" id="vidro"></i>
+    <i class="fas fa-fish draggable" draggable="true" in-game-value="4" style="color: #9966ff;" id="vidro"></i>
+    <i class="fas fa-frog draggable" draggable="true" in-game-value="5" style="color: #4bc0c0;" id="organico"></i>
+    <i class="fas fa-horse draggable" draggable="true" in-game-value="6" style="color: #333333;" id="papel"></i>
+    <i class="fas fa-spider draggable" draggable="true" in-game-value="7" style="color: #ff99cc;" id="papel"></i>
+
+
+
   </section>
+
+
   <section class="droppable-elements">
 
-    <!-- <div class="droppable metais" data-draggable-id="frog"></div> -->
       
-      <img src="./images/metais.png" class="droppable metais" data-draggable-id="frog" width="300" height="300">
-      <img src="./images/naoReciclaveis.png" class="droppable metais" data-draggable-id="cat" width="300" height="300">
-      <img src="./images/organicos.png" class="droppable metais" data-draggable-id="dog" width="300" height="300">
-      <img src="./images/papeis.png" class="droppable metais" data-draggable-id="dove" width="300" height="300">
-      <img src="./images/plasticos.png" class="droppable metais" data-draggable-id="horse" width="300" height="300">
-      <img src="./images/vidros.png" class="droppable metais" data-draggable-id="spider" width="300" height="300">
+      <img src="./images/metais.png" class="droppable metais" game="5" data-draggable-id="metal" width="300" height="300">
+      <img src="./images/naoReciclaveis.png" class="droppable metais" game="5" data-draggable-id="naoReciclavel" width="300" height="300">
+      <img src="./images/organicos.png" class="droppable metais" game="5" data-draggable-id="organico" width="300" height="300">
+      <img src="./images/papeis.png" class="droppable metais" game="5" data-draggable-id="papel" width="300" height="300">
+      <img src="./images/plasticos.png" class="droppable metais" game="5" data-draggable-id="plastico" width="300" height="300">
+      <img src="./images/vidros.png" class="droppable metais" game="5" data-draggable-id="vidro" width="300" height="300">
 
       
 
-
-    <!-- <div class="droppable naoReciclaveis" data-draggable-id="dove"></div>
-    <div class="droppable organicos" data-draggable-id="cat"></div>
-    <div class="droppable papeis" data-draggable-id="fish"></div>
-    <div class="droppable plasticos" data-draggable-id="dog"></div>
-    <div class="droppable vidros" data-draggable-id="dog"></div> -->
   </section>
 
   <section class="output">
+
     <h1 id="result" >Pontuação: 0</h1>
+
   </section>
 
-
-
-<!-- partial -->
-  <script  src="./script.js"></script>
+  <script src="./script.js"></script>
+  
+  <!-- <embed src="./sounds/pokemonMusic.mp3" loop="true" autostart="true" width="2"height="2">  -->
 
 </body>
 
-<footer>  
-  <embed src="./sounds/pokemonMusic.mp3" loop="true" autostart="true" width="2"height="0"> 
-</footer>
 </html>
