agora alguma coisa funciona

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <section class="draggable-elements">
 
 
-    <i class="fas fa-cat draggable lixo" draggable="true" game="15" style="color: #ff6384;" id="metal"></i>
-    <i class="fas fa-dog draggable" draggable="true" in-game-value="2" style="color: #36a2eb;" id="plastico"></i>
-    <i class="fas fa-dove draggable" draggable="true" in-game-value="3" style="color: #ffce56;" id="vidro"></i>
-    <i class="fas fa-fish draggable" draggable="true" in-game-value="4" style="color: #9966ff;" id="vidro"></i>
-    <i class="fas fa-frog draggable" draggable="true" in-game-value="5" style="color: #4bc0c0;" id="organico"></i>
-    <i class="fas fa-horse draggable" draggable="true" in-game-value="6" style="color: #333333;" id="papel"></i>
-    <i class="fas fa-spider draggable" draggable="true" in-game-value="7" style="color: #ff99cc;" id="papel"></i>
+    <i class="fas fa-cat draggable lixo" draggable="true" game="1" style="color: #ff6384;" id="metal"></i>
+    <i class="fas fa-dog draggable" draggable="true" game="2" style="color: #36a2eb;" id="naoReciclavel"></i>
+    <i class="fas fa-dove draggable" draggable="true" game="3" style="color: #ffce56;" id="organico"></i>
+    <i class="fas fa-fish draggable" draggable="true" game="4" style="color: #9966ff;" id="papel"></i>
+    <i class="fas fa-frog draggable" draggable="true" game="5" style="color: #4bc0c0;" id="plastico"></i>
+    <i class="fas fa-horse draggable" draggable="true" game="6" style="color: #333333;" id="vidro"></i>
+    <i class="fas fa-spider draggable" draggable="true" game="7" style="color: #ff99cc;" id="papel"></i>
 
 
 
@@ -42,7 +42,7 @@
 
   <section class="output">
 
-    <h1 id="result" >Pontuação: 0</h1>
+    <h1 id="result" >Pontuação: </h1>
 
   </section>
 
