é para a parte do lixo e itens estar 100% agora

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
   <section class="droppable-elements">
  
-      <img src="./images/metais.png"         class="droppable metais" game="0" data-draggable-id="metal" width="300" height="300">
-      <img src="./images/naoReciclaveis.png" class="droppable metais" game="0" data-draggable-id="naoReciclavel" width="300" height="300">
-      <img src="./images/organicos.png"      class="droppable metais" game="0" data-draggable-id="organico" width="300" height="300">
-      <img src="./images/papeis.png"         class="droppable metais" game="0" data-draggable-id="papel" width="300" height="300">
-      <img src="./images/plasticos.png"      class="droppable metais" game="0" data-draggable-id="plastico" width="300" height="300">
-      <img src="./images/vidros.png"         class="droppable metais" game="0" data-draggable-id="vidro" width="300" height="300">
+      <img src="./images/metais.png"         class="droppable" game="0" lixeira="true" data-draggable-id="metal" width="300" height="300">
+      <img src="./images/naoReciclaveis.png" class="droppable" game="0" lixeira="true" data-draggable-id="naoReciclavel" width="300" height="300">
+      <img src="./images/organicos.png"      class="droppable" game="0" lixeira="true" data-draggable-id="organico" width="300" height="300">
+      <img src="./images/papeis.png"         class="droppable" game="0" lixeira="true" data-draggable-id="papel" width="300" height="300">
+      <img src="./images/plasticos.png"      class="droppable" game="0" lixeira="true" data-draggable-id="plastico" width="300" height="300">
+      <img src="./images/vidros.png"         class="droppable" game="0" lixeira="true" data-draggable-id="vidro" width="300" height="300">
 
   </section>
   
@@ -27,13 +27,8 @@
 
   <section class="draggable-elements">
 
-    <i class="fas fa-cat draggable lixo" draggable="true" game="1" unique="A" style="color: #ff6384;" id="metal"></i>
-    <i class="fas fa-dog draggable"      draggable="true" game="2" unique="B" style="color: #36a2eb;" id="naoReciclavel"></i>
-    <i class="fas fa-dove draggable"     draggable="true" game="3" unique="C" style="color: #ffce56;" id="organico"></i>
-    <i class="fas fa-fish draggable"     draggable="true" game="4" unique="D" style="color: #9966ff;" id="papel"></i>
-    <i class="fas fa-frog draggable"     draggable="true" game="5" unique="E" style="color: #4bc0c0;" id="plastico"></i>
-    <i class="fas fa-horse draggable"    draggable="true" game="6" unique="F" style="color: #333333;" id="vidro"></i>
-    <i class="fas fa-spider draggable"   draggable="true" game="7" unique="G" style="color: #4bc0c0;" id="papel"></i>
+    <img class="draggable" src="/lixo/jornal.png" draggable="true" game="1" unique="A"  id="papel">
+    <img class="draggable" src="/lixo/livro.png"  draggable="true" game="5" unique="B"  id="papel">
 
   </section>
 
