--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+  <div><h1 id="result">Pontuação: 0</h1></div>
+
   <section class="droppable-elements">
  
       <img src="./images/metais.png"         class="droppable" game="0" lixeira="true" data-draggable-id="metal" width="300" height="300">
@@ -22,12 +24,65 @@
 
   </section>
   
-  <div><h1 id="result">Pontuação: 0</h1></div>
 
-  <section class="draggable-elements">
+  <section class="draggable-elements" style="position: absolute;align-self: center;">
 
-    <img class="draggable" src="/lixo/jornal.png" draggable="true" game="1" unique="A"  id="papel">
-    <img class="draggable" src="/lixo/livro.png"  draggable="true" game="5" unique="B"  id="papel">
+  <div>
+
+    <img class="draggable" src="/lixo/bife.png" draggable="true" game="1" unique="A"  id="organico">
+    <img class="draggable" src="/lixo/caixa.png"  draggable="true" game="2" unique="B"  id="papel">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/CD.png"  draggable="true" game="3" unique="C"  id="plastico"> 
+    <img class="draggable" src="/lixo/copo.png"  draggable="true" game="4" unique="D"  id="vidro">
+
+  </div>
+  <div>
+
+
+    <img class="draggable" src="/lixo/coquinhaGelada.png"  draggable="true" game="5" unique="E"  id="vidro">
+    <img class="draggable" src="/lixo/gasolina.png"  draggable="true" game="6" unique="F"  id="papel">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/jornal.png"  draggable="true" game="7" unique="G"  id="papel">
+    <img class="draggable" src="/lixo/laranja.png"  draggable="true" game="8" unique="H"  id="organico">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/leite.png"  draggable="true" game="9" unique="I"  id="vidro">
+    <img class="draggable" src="/lixo/livro.png"  draggable="true" game="1" unique="J"  id="papel">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/peixes.png"  draggable="true" game="2" unique="K"  id="organico">
+    <img class="draggable" src="/lixo/pet.png"  draggable="true" game="3" unique="L"  id="plastico">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/queijo.png"  draggable="true" game="4" unique="M"  id="organico">
+    <img class="draggable" src="/lixo/saco.png"  draggable="true" game="5" unique="N"  id="plastico">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/tabua.png"  draggable="true" game="6" unique="O"  id="plastico">
+    <img class="draggable" src="/lixo/taca.png"  draggable="true" game="7" unique="P"  id="vidro">
+
+  </div>
+  <div>
+
+    <img class="draggable" src="/lixo/vagem.png"  draggable="true" game="8" unique="Q"  id="organico">
+    <img class="draggable" src="/lixo/vinho.png"  draggable="true" game="9" unique="R"  id="vidro">
+
+  </div>
+  
 
   </section>
 
