--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div><h1 id="result">Pontuação: 0</h1></div>
+  <div style="display: flex; text-align: center;"><h1 id="result">Pontuação: 0</h1><h1 id="objetivo">Objetivo: 0</h1></div>
 
   <section class="droppable-elements">
  
