valor dos itens adicionados

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
   </div>
   <div>
 
-
     <img class="draggable" src="./lixo/coquinhaGelada.png"  draggable="true" game="5" unique="E"  id="vidro">
-    <img class="draggable" src="./lixo/gasolina.png"  draggable="true" game="6" unique="F"  id="papel">
+    <img class="draggable" src="./lixo/gasolina.png"  draggable="true" game="6" unique="F"  id="plastico">
 
   </div>
   <div>
