--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 
-  <div style="display: flex; text-align: center;"><h1 id="result">Pontuação: 0</h1><h1 id="objetivo">Objetivo: 0</h1></div>
+  <div style="display: inline-flex"><h1 id="result">Pontuação: 0</h1><h1 id="objetivo">Objetivo: 0</h1>
+    <h2 style="margin-left: 440px;margin-top: 16px;">Um jogo de Vinícius Lojhan, Julia Scheffer e Amanda Marochi</h2></div>
 
   <section class="droppable-elements">
  
@@ -90,8 +91,6 @@
   <!-- <embed src="./sounds/pokemonMusic.mp3" loop="true" autostart="true" width="2"height="2">  -->
 
 </body>
-
-
 
 
 </html>
