sistema de tentativas implementado

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-  <div style="display: inline-flex"><h1 id="result">Pontuação: 0</h1><h1 id="objetivo">Objetivo: 0</h1>
-    <h2 style="margin-left: 440px;margin-top: 16px;">Um jogo de Vinícius Lojhan, Julia Scheffer e Amanda Marochi</h2></div>
+  <div style="display: inline-flex"><h1 id="result">Total: 0</h1><h1 id="objetivo">Objetivo: 0</h1><h1 id="vidas">Vidas: 3</h1>
+    <h2 style="margin-left: 260px;margin-top: 16px;">Um jogo de Vinícius Lojhan, Julia Scheffer e Amanda Marochi</h2></div>
 
   <section class="droppable-elements">
  
