--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-BR" >
 <head>
   <meta charset="UTF-8">
   <title>joguinho</title>
@@ -30,56 +30,56 @@
 
   <div>
 
-    <img class="draggable" src="./lixo/bife.png" draggable="true" game="1" unique="A"  id="organico">
-    <img class="draggable" src="./lixo/caixa.png"  draggable="true" game="2" unique="B"  id="papel">
+    <img class="pulse wiggle draggable"  src="./lixo/bife.png"   draggable="true" game="1" unique="A"  id="organico">
+    <img class="pulse wiggle3 draggable" src="./lixo/caixa.png"  draggable="true" game="2" unique="B"  id="papel">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/CD.png"  draggable="true" game="3" unique="C"  id="plastico"> 
-    <img class="draggable" src="./lixo/copo.png"  draggable="true" game="4" unique="D"  id="vidro">
+    <img class="pulse wiggle4 draggable" src="./lixo/CD.png"    draggable="true" game="3" unique="C"  id="plastico"> 
+    <img class="pulse wiggle2 draggable" src="./lixo/copo.png"  draggable="true" game="4" unique="D"  id="vidro">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/coquinhaGelada.png"  draggable="true" game="5" unique="E"  id="vidro">
-    <img class="draggable" src="./lixo/gasolina.png"  draggable="true" game="6" unique="F"  id="plastico">
+    <img class="pulse wiggle2 draggable" src="./lixo/coquinhaGelada.png"  draggable="true" game="5" unique="E"  id="vidro">
+    <img class="pulse wiggle draggable"  src="./lixo/gasolina.png"        draggable="true" game="6" unique="F"  id="plastico">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/jornal.png"  draggable="true" game="7" unique="G"  id="papel">
-    <img class="draggable" src="./lixo/laranja.png"  draggable="true" game="8" unique="H"  id="organico">
+    <img class="pulse wiggle3 draggable" src="./lixo/jornal.png"   draggable="true" game="7" unique="G"  id="papel">
+    <img class="pulse wiggle2 draggable" src="./lixo/laranja.png"  draggable="true" game="8" unique="H"  id="organico">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/leite.png"  draggable="true" game="9" unique="I"  id="vidro">
-    <img class="draggable" src="./lixo/livro.png"  draggable="true" game="1" unique="J"  id="papel">
+    <img class="pulse wiggle4 draggable" src="./lixo/leite.png"  draggable="true" game="9" unique="I"  id="vidro">
+    <img class="pulse wiggle draggable"  src="./lixo/livro.png"  draggable="true" game="1" unique="J"  id="papel">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/peixes.png"  draggable="true" game="2" unique="K"  id="organico">
-    <img class="draggable" src="./lixo/pet.png"  draggable="true" game="3" unique="L"  id="plastico">
+    <img class="pulse wiggle draggable"  src="./lixo/peixes.png"  draggable="true" game="2" unique="K"  id="organico">
+    <img class="pulse wiggle3 draggable" src="./lixo/pet.png"     draggable="true" game="3" unique="L"  id="plastico">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/queijo.png"  draggable="true" game="4" unique="M"  id="organico">
-    <img class="draggable" src="./lixo/saco.png"  draggable="true" game="5" unique="N"  id="plastico">
+    <img class="pulse wiggle2 draggable" src="./lixo/queijo.png"  draggable="true" game="4" unique="M"  id="organico">
+    <img class="pulse wiggle4 draggable" src="./lixo/saco.png"    draggable="true" game="5" unique="N"  id="plastico">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/tabua.png"  draggable="true" game="6" unique="O"  id="plastico">
-    <img class="draggable" src="./lixo/taca.png"  draggable="true" game="7" unique="P"  id="vidro">
+    <img class="pulse wiggle4 draggable" src="./lixo/tabua.png"  draggable="true" game="6" unique="O"  id="plastico">
+    <img class="pulse wiggle2 draggable" src="./lixo/taca.png"   draggable="true" game="7" unique="P"  id="vidro">
 
   </div>
   <div>
 
-    <img class="draggable" src="./lixo/vagem.png"  draggable="true" game="8" unique="Q"  id="organico">
-    <img class="draggable" src="./lixo/vinho.png"  draggable="true" game="9" unique="R"  id="vidro">
+    <img class="pulse wiggle draggable" src="./lixo/vagem.png"  draggable="true" game="8" unique="Q"  id="organico">
+    <img class="pulse wiggle3 draggable" src="./lixo/vinho.png"  draggable="true" game="9" unique="R"  id="vidro">
 
   </div>
   
