--- a/index.html
+++ b/index.html
@@ -90,11 +90,9 @@
 
   <script src="./script.js"></script>
 
-  <!-- <embed src="./sounds/pokemonMusic.mp3" loop="true" autostart="true" width="2"height="2">  -->
+  <embed src="./sounds/11.mp3" loop="true" autostart="true" width="2"height="2"> 
  
 </body>
-
-
 
 </html>
 
