mensagem de ganhar e perder

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="./style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="jquery.dataAttr.js"></script>
+  
 
 </head>
 
 
-<body>
+<body id="body">
+
+  <!-- <audio id="acertar"><source src="./sounds/20.mp3" type="audio/mpeg"></audio> -->
 
   <div style="display: inline-flex"><h1 id="result">Total: 0</h1><h1 id="objetivo">Objetivo: 0</h1><h1 id="vidas">Vidas: 3</h1>
     <h2 style="margin-left: 260px;margin-top: 16px;">Um jogo de Vinícius Lojhan, Julia Scheffer e Amanda Marochi</h2></div>
@@ -84,15 +87,18 @@
     <img class="pulse wiggle3 draggable" src="./lixo/vinho.png"  draggable="true" game="9" unique="R"  id="vidro">
 
   </div>
+
   
 
   </section>
 
   <script src="./script.js"></script>
+<!-- 
+    <embed src="./sounds/11.mp3" loop="true" autostart="true" width="2"height="2">  -->
 
-  <embed src="./sounds/11.mp3" loop="true" autostart="true" width="2"height="2"> 
  
 </body>
+  
 
 </html>
 
