--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- <audio id="acertar"><source src="./sounds/20.mp3" type="audio/mpeg"></audio> -->
 
   <div style="display: inline-flex"><h1 id="result">Total: 0</h1><h1 id="objetivo">Objetivo: 0</h1><h1 id="vidas">Vidas: 3</h1>
-    <h2 style="margin-left: 260px;margin-top: 16px;">Um jogo de Vinícius Lojhan, Julia Scheffer e Amanda Marochi</h2></div>
+    <h2 >Um jogo de Vinícius Lojhan, Julia Scheffer e Amanda Marochi</h2></div>
 
   <section class="droppable-elements">
 
@@ -30,9 +30,41 @@
       <img src="./images/vidros.png"         class="droppable" game="0" lixeira="true" data-draggable-id="vidro" width="300" height="300">
 
   </section>
-  
 
-  <section class="draggable-elements" style="position: absolute;align-self: center;">
+  <section class="box">
+  
+  <ul id="side-menu">
+    <li>
+      <img id="seta3" class="instrucoes" src="frecha.png">
+      <text id="total" class="instrucoes">Cada acerto aumenta o valor total</text>
+    </li>
+    <li>
+      <img id="seta5" class="instrucoes" src="frecha.png">
+      <text id="objetivo" class="instrucoes">O total deve se igualar a esse numero para vencer!</text>
+    </li>
+    <li>
+      <img id="seta4" class="instrucoes" src="frecha.png">
+      <text id="vidas" class="instrucoes">Cuidado para não esgotar as vidas</text>
+    </li>
+    <li>
+      <img src="https://img.icons8.com/doodle/50/000000/help.png" id="info"/>
+    </li>
+    <li>
+      <img id="seta2" class="instrucoes" src="arrow.png">
+      <text class="instrucoes" id="cestas">Você deve levar os itens às suas cestas correspondentes</text>
+      <img class="instrucoes" id="cestasExemplo" src="exemplo.png">
+    </li>
+    <li>
+      <text  id="valor" class="instrucoes">Cada item possui um valor próprio</text>
+      <img id="seta" class="instrucoes" src="arrow.png">
+    </li>
+  
+  </ul>
+
+
+    <section class="draggable-elements" style="position: absolute;align-self: center;">
+
+    
 
   <div>
 
@@ -42,7 +74,7 @@
   </div>
   <div>
 
-    <img class="pulse wiggle4 draggable" src="./lixo/CD.png"    draggable="true" game="3" unique="C"  id="plastico"> 
+    <img class="pulse wiggle4 draggable" src="./lixo/CD.png"    draggable="true" game="3" unique="C"  id="naoReciclavel"> 
     <img class="pulse wiggle2 draggable" src="./lixo/copo.png"  draggable="true" game="4" unique="D"  id="vidro">
 
   </div>
@@ -89,12 +121,8 @@
 
   </div>
 
-
-
-  
-
   </section>
-
+</section>
   <script src="./script.js"></script>
 <!-- 
     <embed src="./sounds/11.mp3" loop="true" autostart="true" width="2"height="2">  -->
