--- a/index.html
+++ b/index.html
@@ -35,28 +35,28 @@
   
   <ul id="side-menu">
     <li>
-      <img id="seta3" class="instrucoes" src="frecha.png">
+      <img id="seta3" class="instrucoes" src="./images/frecha.png">
       <text id="total" class="instrucoes">Cada acerto aumenta o valor total</text>
     </li>
     <li>
-      <img id="seta5" class="instrucoes" src="frecha.png">
+      <img id="seta5" class="instrucoes" src="./images/frecha.png">
       <text id="objetivo" class="instrucoes">O total deve se igualar a esse numero para vencer!</text>
     </li>
     <li>
-      <img id="seta4" class="instrucoes" src="frecha.png">
+      <img id="seta4" class="instrucoes" src="./images/frecha.png">
       <text id="vidas" class="instrucoes">Cuidado para não esgotar as vidas</text>
     </li>
     <li>
       <img src="https://img.icons8.com/doodle/50/000000/help.png" id="info"/>
     </li>
     <li>
-      <img id="seta2" class="instrucoes" src="arrow.png">
+      <img id="seta2" class="instrucoes" src="./images/arrow.png">
       <text class="instrucoes" id="cestas">Você deve levar os itens às suas cestas correspondentes</text>
-      <img class="instrucoes" id="cestasExemplo" src="exemplo.png">
+      <img class="instrucoes" id="cestasExemplo" src="./images/exemplo.png">
     </li>
     <li>
       <text  id="valor" class="instrucoes">Cada item possui um valor próprio</text>
-      <img id="seta" class="instrucoes" src="arrow.png">
+      <img id="seta" class="instrucoes" src="./images/arrow.png">
     </li>
   
   </ul>
